2011-06-21 Borut Razem <borut.razem AT gmail.net>

	* regtest.php: removed XHTML 1.0 validation errors
	* index.php, snap_header.php, previous.php, links.php:
	  style.css moved to styles/

2011-06-19 Borut Razem <borut.razem AT gmail.net>

	* download_regtests_db.php, regtest.php: added possibility to download
	  regression test results database in csv.bz2 format

2011-06-12 Borut Razem <borut.razem AT gmail.net>

	* download_regtests_db.php, snap.php, update_regtests_db.php,
	  snap_header.php, get_regtest.php: corrected license text
	* regtests.php: select the build on the given date

2011-06-09 Borut Razem <borut.razem AT gmail.net>

	* download_regtests_db.php, regtests.php, get_regtest.php, sdcc.ini:
	  use sdcc.ini file for db connection settings

2011-06-08 Borut Razem <borut.razem AT gmail.net>

	* snap_header.php: removed regression tests downoad
	* left_menu.inc, regtests.php, get_regtest.php:
	  added regression tests page
	* download_regtests_db.php: use $regTestDb instead $db

2011-06-03 Borut Razem <borut.razem AT gmail.net>

	* snap_header.php: get list of platforms from database

2011-05-29 Borut Razem <borut.razem AT gmail.net>

	* download_regtests_db.php: added regtest form
	* styles/*, scripts/*, images/timespan.png: added

22011-05-23 Borut Razem <borut.razem AT gmail.net>

	* download_regtests_db.php: added where parameter

2011-05-22 Borut Razem <borut.razem AT gmail.net>

	* update_regtests_db.php: added
	* download_regtests_db.php, snap.php, snap_header.php:
	  added possibility to download regression test results database
	  in CSV format

2011-05-03 Borut Razem <borut.razem AT gmail.net>

	* index.php: changed Borut's e-mail address
	* left_menu.inc: fixed bug #3296869 - Broken link to wiki

2011-01-19 Borut Razem <borut.razem AT gmail.net>

	* footer.php: changed SourceForge logo

2011-01-16 Borut Razem <borut.razem AT gmail.net>

	* snap.php: search for "invalid instructions"

2010-11-01 Borut Razem <borut.razem AT siol.net>
